Fix: align font-size of code and line numbers

--- a/style.css
+++ b/style.css
@@ -376,6 +376,9 @@ article div#lastUpdateTime {
 #blog code {
 	font-size: 0.85em;/* Seems equivalent to body font size */
 }
+#blog code .line-numbers-rows {
+	font-size: 1.175em;/* Seems equivalent to above code font-size */
+}
 
 #blog code hr {
 	display: inline-block;
